# lx-hw-db

./: .dockerignore  .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc.yaml  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  PHASE3_PLAN.md  PHASE4_PLAN.md  README.md  README_GUI.md  _config.yml  build.rs  catalog-info.yaml  clippy.toml  default.nix  docker-compose.yml  flake.nix  install.sh  mkdocs.yml  project_plan.md  rustfmt.toml  serve.py  workflow-fixes-summary.md
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-08-26-hardware-detection-cli/: spec.md  tasks.md
.agent-os/specs/2025-08-26-hardware-detection-cli/sub-specs/: api-spec.md  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md  test-actions.md  trigger-deploy.md
.github/DISCUSSION_TEMPLATE/: general-discussion.yml  hardware-showcase.yml  help-needed.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  hardware-compatibility-issue.yml  hardware-submission.yml
.github/PULL_REQUEST_TEMPLATE/: code-contribution.md  hardware-report.md
.github/workflows/: branch-protection.yml  build-indices.yml  build-packages.yml  community-engagement.yml  contributor-stats.yml  deploy-pages.yml  deploy-web.yml  discussion-management.yml  docker.yml  flatpak.yml  hardware-processing.yml  publish-crates.yml  release.yml  repository-management.yml  test-and-lint.yml  test-distributions.yml  test-simple.yml  update-search-indices.yml  validate-hardware-report.yml  validate-hardware-reports.yml
api/v1/: index.json
api/v1/search/: components.json  distributions.json  kernels.json  vendors.json
api/v1/stats/: overview.json  top-hardware.json  trends.json
completions/bash/: lx-hw-detect
completions/fish/: lx-hw-detect.fish
completions/zsh/: _lx-hw-detect
config/: default.toml
config/examples/: privacy-focused.toml  server.toml
data/: configuration-tips.json  contributor-stats.json  contributor-summary.txt  discussion-stats.json  discussion-summary.txt  hardware-index.json  repository-stats.json  repository-summary.txt
debian/: changelog  control  install  rules
design/: IMPLEMENTATION_STATUS.md  qt6-qml-interface-design.md
docs/: AUTOMATED_SUBMISSION.md  COMMUNITY.md  COMMUNITY_GUIDELINES.md  CONTRIBUTOR_BADGES.md  DEPLOYMENT.md  GITHUB_INFRASTRUCTURE.md  HARDWARE_SUBMISSION_GUIDE.md  INSTALL.md  INSTALLATION.md  PRIVACY_GUIDE.md  README.md  TROUBLESHOOTING.md  USAGE.md  index.md
docs/api/: README.md
docs/community/: onboarding.md
docs/getting-started/: quick-start.md
docs/man/: lx-hw-detect-gtk.1  lx-hw-detect-qt6.1  lx-hw-detect.1  lx-hw-indexer.1
docs/project/: marketing-materials.md
docs/technical/: architecture.md
docs/user-guides/: end-user.md  sysadmin.md
hardware/: README.md
hardware-reports/: README.md
hardware-reports/2024/01/: proper-sample-desktop.json
hardware-reports/2024/12/: real-system-20250826.json  trigger-deployment.json
hardware-reports/2025/08/: .gitkeep
hardware/cpu/: README.md
hardware/gpu/: README.md
hardware/motherboard/: README.md
hardware/network/: README.md
hardware/peripherals/: README.md
indices/: by-component.json  by-distribution.json  by-kernel.json  by-vendor.json  compatibility-matrix.json  search-terms.json
js/: category-browser.js  configuration-tips.js  contributor-leaderboard.js  data-loader.js  database-indexer.js  main.js  search-engine.js  search-ui.js  stats-dashboard.js  tip-moderation.js  tip-submission.js
packaging/arch/: PKGBUILD
packaging/fedora/: lx-hw-db.spec
packaging/flatpak/: org.lxhwdb.LxHwDb.appdata.xml  org.lxhwdb.LxHwDb.desktop  org.lxhwdb.LxHwDb.yml
packaging/nixos/: default.nix  home-manager.nix  module.nix
packaging/systemd/: lx-hw-db-server.service
scripts/: install-arch.sh  install-fedora.sh  install-nixos.sh  install-ubuntu.sh
src/: github_submit.rs  lib.rs
src/cli/: mod.rs
src/configuration/: dkms.rs  drivers.rs  engine.rs  kernel_params.rs  mod.rs  packages.rs  recommendations.rs
src/detectors/: dmidecode.rs  integration.rs  inxi.rs  kernel.rs  kernel_source.rs  lshw.rs  lspci.rs  lsusb.rs  mod.rs
src/errors/: mod.rs
src/gui/: application.rs  i18n.rs  mod.rs  models.rs  simple.rs  utils.rs  window.rs
src/gui/widgets/: configuration_view.rs  detection_progress.rs  device_card.rs  export_dialog.rs  hardware_view.rs  mod.rs
src/hardware/: mod.rs
src/indexer/: analysis.rs  builder.rs  compatibility.rs  mod.rs  models.rs  search_index.rs  statistics.rs
src/output/: mod.rs
src/privacy/: mod.rs
src/qt6/: application.rs  backend.rs  mod.rs  models.rs
src/qt6/qml/: ConfigScreen.qml  DetectionScreen.qml  HardwareScreen.qml  MainWindow.qml  PrivacyScreen.qml  SubmissionScreen.qml  WelcomeScreen.qml  main.qml  standalone_main.qml
src/resources/: style.css
src/validation/: business_logic.rs  cli.rs  consistency.rs  constants.rs  mod.rs  privacy.rs  schema.rs
statistics/: latest-stats.txt  overview.json
tests/: dmidecode_integration_test.rs  dmidecode_tests.rs  inxi_integration_test.rs  inxi_tests.rs  lshw_integration_test.rs  lshw_tests.rs  lspci_integration_test.rs  lspci_tests.rs  lsusb_integration_test.rs  lsusb_tests.rs  phase2_integration_test.rs  tool_filtering_test.rs
web/: .eslintrc.json  .stylelintrc.json  Dockerfile  README.md  build-info.json  docker-compose.production.yml  index.html  package.json  sample-hardware-report.json  serve.py
web/api/v1/: index.json
web/css/: styles.css
web/data/: contributor-stats.json  hardware-database.json  my-hardware.json  new-detection-test.json
web/indices/: by-component.json  by-distribution.json  by-kernel.json  by-vendor.json  compatibility-matrix.json  search-terms.json
web/js/: compatibility-matrix.js  configuration-engine.js  configuration-profile-builder.js  configuration-tips.js  data-loader.js  github-auth.js  hardware-bridge.js  hardware-details.js  main.js  search-engine.js  search-ui.js  stats-dashboard.js  tip-export.js  tip-search.js
web/statistics/: latest-stats.txt  overview.json
(+29 files in other folders)
