[package]
name = "lx-hw-detect"
version = "0.1.0"
edition = "2021"
authors = ["Linux Hardware Database Contributors"]
description = "Privacy-preserving Linux hardware detection and compatibility reporting tool"
license = "AGPL-3.0"
repository = "https://github.com/lx-hw-db/lx-hw-db"
readme = "README.md"
keywords = ["linux", "hardware", "compatibility", "privacy", "detection"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
# CLI and configuration
clap = { version = "4.0", features = ["derive", "env", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime and concurrency  
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography and privacy
ring = "0.17"
hex = "0.4"
rand = "0.8"

# Time and system utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

# System interaction
nix = "0.29"
libc = "0.2"

# Logging
log = "0.4"
env_logger = "0.11"

# Text processing and regex
regex = "1.0"

# Async traits
async-trait = "0.1"

# HTTP client and URL encoding
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
pretty_assertions = "1.0"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
