[package]
name = "lx-hw-detect"
version = "0.1.0"
edition = "2021"
authors = ["Linux Hardware Database Contributors"]
description = "Privacy-preserving Linux hardware detection and compatibility reporting tool with CLI, GTK4, and Qt6 interfaces"
license = "AGPL-3.0"
repository = "https://github.com/lx-hw-db/lx-hw-db"
readme = "README.md"
keywords = ["linux", "hardware", "compatibility", "privacy", "detection", "gtk4", "qt6"]
categories = ["command-line-utilities", "hardware-support", "gui"]

[dependencies]
# CLI and configuration
clap = { version = "4.0", features = ["derive", "env", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime and concurrency
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# GitHub submission
rpassword = "7.0"
tempfile = "3.8"

# Cryptography and privacy
ring = "0.17"
hex = "0.4"
rand = "0.8"

# Time and system utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

# System interaction
nix = "0.29"
libc = "0.2"

# Logging
log = "0.4"
env_logger = "0.11"

# Text processing and regex
regex = "1.0"

# Async traits
async-trait = "0.1"

# HTTP client and URL encoding
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2.0"

# File system operations
glob = "0.3"

# GUI dependencies (disabled for demo mode)
# GTK4 with libadwaita - Full integration requires system libraries
# gtk4 = { version = "0.9", package = "gtk4", features = ["v4_10"], optional = true }
# libadwaita = { version = "0.7", package = "libadwaita", features = ["v1_6"], optional = true }
# glib = { version = "0.20", optional = true }

# Qt6 dependencies (currently optional for demo mode)
cxx = { version = "1.0", optional = true }
cxx-qt = { version = "0.6", optional = true }
cxx-qt-lib = { version = "0.6", optional = true }

# Internationalization
fluent = { version = "0.16", optional = true }
fluent-templates = { version = "0.10", optional = true }

[[bin]]
name = "lx-hw-detect"
path = "src/bin/lx-hw-detect.rs"

[[bin]]
name = "lx-hw-indexer"
path = "src/bin/lx-hw-indexer.rs"

[[bin]]
name = "lx-hw-detect-gtk"
path = "src/bin/lx-hw-detect-gtk.rs"
required-features = ["gtk-gui"]

[[bin]]
name = "lx-hw-detect-qt6"
path = "src/bin/lx-hw-detect-qt6.rs"
required-features = ["qt6-gui"]

[features]
default = []
gtk-gui = []  # Demo mode - GTK4 libraries not required for demonstration
qt6-gui = []  # Demo mode - no cxx-qt required
all-gui = ["gtk-gui", "qt6-gui"]

[build-dependencies]
# cxx-qt-build = { version = "0.6" }  # Disabled for demo mode

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
pretty_assertions = "1.0"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
